# arkcompiler_runtime_core

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_dyn.md  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  ark_config.gni  ark_root.gni  bundle.json  codecheck_ignore.json  runtime_core.diff  static_vm_config.gni
abc2program/tests/: BUILD.gn
ark_guard/: AGENTS.md  BUILD.gn  CLAUDE.md  README.md
ark_guard/abckit_wrapper/: BUILD.gn
ark_guard/ark_guard/: main.cpp
ark_guard/tests/: BUILD.gn  ark_guard_test_config.gni
arkplatform/: AGENTS.md  BUILD.gn  arkplatform_config.gni  hybrid_config.gni
arkplatform/hybrid/: ecma_vm_interface.h  hybrid_frame_info.h  hybrid_heap_snapshot_info.h  sts_vm_interface.h  vm_interface.h
arkplatform/include/: arkplatfom_jsnapi.h  arkplatform.h
arkplatform/src/: arkplatform.cpp
arkplatform/tests/: BUILD.gn  jsnapi_test.cpp  xgc_test.cpp
common_runtime/: BUILD.gn  common_runtime.gni
common_runtime/common_components/: BUILD.gn
common_runtime/common_interfaces/: base_runtime.h  vm_interface.h
disassembler/tests/: BUILD.gn  columnnumber_test.cpp  disassember_column_number_test.cpp  disassembler_annotations_test.cpp  disassembler_column_number_test.cpp  disassembler_get_file_name_test.cpp  disassembler_line_number_test.cpp  disassembler_module_literal_test.cpp  disassembler_security_test.cpp  disassembler_string_test.cpp  gen_pa_file.py
libark_defect_scan_aux/: BUILD.gn  README.md  abc_file.cpp  class.cpp  function.cpp  graph.cpp  module_record.cpp
libark_defect_scan_aux/include/: abc_file.h  class.h  function.h  graph.h  inst_type.h  module_record.h
libark_defect_scan_aux/tests/: generate_abc_file.py
static_core/: .clang-tidy  .gn  AGENTS.md  BUILD.gn  CMakeLists.txt  OAT.xml  README.md  REVIEWERS  ark_config.gni  ark_root.gni  codecheck_ignore.json  session-ses_1306.md
static_core/abc2program/: AGENTS.md  BUILD.gn  CLAUDE.md  CMakeLists.txt  abc2prog_main.cpp  abc2program_compiler.cpp  abc2program_compiler.h  abc2program_driver.cpp  abc2program_driver.h  abc2program_key_data.cpp  abc2program_key_data.h  abc2program_log.cpp  abc2program_log.h  abc2program_options.cpp  abc2program_options.h  abc_annotation_processor.cpp  abc_annotation_processor.h  abc_class_processor.cpp  abc_class_processor.h  abc_code_processor.cpp  abc_code_processor.h  abc_field_processor.cpp  abc_field_processor.h  abc_file_entity_processor.cpp  abc_file_entity_processor.h  abc_file_processor.cpp  abc_file_processor.h  abc_file_utils.cpp  abc_file_utils.h  abc_literal_array_processor.cpp  abc_literal_array_processor.h  abc_method_processor.cpp  abc_method_processor.h  abc_string_table.cpp  abc_string_table.h  program_dump.cpp  program_dump.h
static_core/assembler/: AGENTS.md  BUILD.gn  CLAUDE.md  CMakeLists.txt  annotation.cpp  annotation.h  asm_isapi.rb  asm_metadata.rb  assembly-context.h  assembly-debug.h  assembly-emitter.cpp  assembly-emitter.h  assembly-field.h  assembly-file-location.h  assembly-function.h  assembly-ins.cpp  assembly-ins.h  assembly-label.h  assembly-literals.h  assembly-methodhandle.h  assembly-parser.cpp  assembly-parser.h  assembly-program.cpp  assembly-program.h  assembly-record.h  assembly-type.cpp  assembly-type.h  context.cpp  define.h  error.h  ide_helpers.h  lexer.cpp  lexer.h  mangling.h  meta.cpp  meta.h  metadata.yaml  pandasm.cpp  pandasm.h
static_core/bytecode_optimizer/: AGENTS.md  BUILD.gn  CLAUDE.md  CMakeLists.txt  bytecode_encoder.h  bytecode_optimizer_isapi.rb  bytecodeopt_options.h  bytecodeopt_peepholes.cpp  bytecodeopt_peepholes.h  call_devirtualization.cpp  call_devirtualization.h  canonicalization.cpp  canonicalization.h  check_resolver.cpp  check_resolver.h  codegen.cpp  codegen.h  common.cpp  common.h  const_array_resolver.cpp  const_array_resolver.h  ir_interface.h  optimize_bytecode.cpp  optimize_bytecode.h  options.yaml  reg_acc_alloc.cpp  reg_acc_alloc.h  reg_encoder.cpp  reg_encoder.h  runtime_adapter.h
static_core/cmake/: ClangTidy.cmake  CodeStyle.cmake  CommonTesting.cmake  Definitions.cmake  HostTools.cmake  PandaAssembly.cmake  PandaCCache.cmake  PandaCmakeFunctions.cmake  PandaSCCache.cmake  PostPlugins.cmake  RegisterPlugins.cmake  Sanitizers.cmake  TemplateBasedGen.cmake  Testing.cmake
static_core/compiler/: AGENTS.md  BUILD.gn  CMakeLists.txt  CompilerIntrinsicsPostPlugins.cmake  CompilerOptionsPostPlugins.cmake  background_task_runner.h  compile_method.cpp  compile_method.h  compiler.yaml  compiler_logger.cpp  compiler_logger.h  compiler_options.cpp  compiler_options.h  compiler_task_runner.h  inplace_task_runner.h  intrinsics_can_encode.inl  optimizer_run.h
static_core/cross_values/: BUILD.gn  CMakeLists.txt  cross_values_generator.rb  cross_values_getters_generator.rb  diff_check_values.sh
static_core/disassembler/: AGENTS.md  BUILD.gn  CLAUDE.md  CMakeLists.txt  DisassemblerPostPlugins.cmake  accumulators.h  disasm.cpp  disasm_backed_debug_info_extractor.cpp  disasm_backed_debug_info_extractor.h  disassembler.cpp  disassembler.h
static_core/docs/: aot.md  aot_on_device.md  aptool.md  assembly_format.md  bytecode_profiling.md  code_metainfo.md  compiler_intro_current.md  cross-values.md  deoptimization.md  file_format.md  flaky_debugging.md  gc-knowledge.md  hybrid_stack.md  import-export.md  interpreter-knowledge.md  intrinsics-yaml.md  ir_format.md  irtoc-intrinsics-for-interpreter.md  irtoc.md  memory-management.md  mutators.md  on-stack-replacement.md  runtime-compiled_code-interaction.md  tracing.md
static_core/dprof/: BUILD.gn
static_core/extras/: CMakeLists.txt
static_core/irtoc/: AGENTS.md  BUILD.gn  CMakeLists.txt  README.md  intrinsics.yaml  irtoc.gni  irtoc_modular.gni
static_core/isa/: BUILD.gn  ChangeLog.md  asserts.rb  combine.rb  gen.rb  gen_wrapper.sh  isa.yaml  isapi.rb
static_core/libarkbase/: AGENTS.md  BUILD.gn  CMakeLists.txt  clang.h  (+8 more)
taihe/: .coveragerc  .gitignore  BUILD.gn  CMakeLists.txt  README.md  process_sdk_files.py  pyproject.toml
verifier/: AGENTS.md  BUILD.gn  CLAUDE.md  verifier.cpp  verifier.h  verify.cpp  verify.h
(+45031 files in other folders)
