# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/runtime_core/ark_config.gni")

config("ark_guard_public_config") {
  include_dirs = [ "$ark_root/ark_guard/include" ]
}

ark_guard_sources = [ "library/ark_guard.cpp" ]

ohos_static_library("ark_guard_static") {
  sources = ark_guard_sources

  include_dirs = [
    "$ark_root/libabckit/include",
    "$ark_root/static_core",
  ]

  configs = [
    "$ark_root/libabckit:abckit_config",
    "$ark_root/ark_guard/abckit_wrapper:abckit_wrapper_public_config",
    "$ark_root/static_core/libpandabase:arkbase_public_config",
  ]

  public_configs = [ ":ark_guard_public_config" ]

  deps = [ "$ark_root/ark_guard/abckit_wrapper:abckit_wrapper_static" ]

  part_name = "runtime_core"
  subsystem_name = "arkcompiler"
}

ohos_executable("ark_guard") {
  sources = [ "ark_guard/main.cpp" ]

  configs = [
    ":ark_guard_public_config",
    "$ark_root/libabckit:abckit_config",
  ]

  deps = [ ":ark_guard_static" ]

  install_enable = false

  part_name = "runtime_core"
  subsystem_name = "arkcompiler"
}
