# Copyright (c) 2025-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/runtime_core/common_runtime/common_runtime.gni")

# Common config for other language plugins
config("common_runtime_public_config") {
  # NOTE(ipetrov): move common_interafces into include sub-directory to avoid includes from other directories
  include_dirs = [ "//arkcompiler/runtime_core/common_runtime" ]
}

# Common shared library for other language plugins
ohos_shared_library("libcommon_runtime") {
  stack_protector_ret = false

  # NOTE(ipetrov): need to fix
  # 1. Avoid common_components directory, split to logical blocks
  # 2. Remove hack with include_dirs = [ ".", ".." ]
  # 3. Fix test dependencies: remove ets_runtime deps, etc
  deps = [ "${crt_root}/common_components:libarkcommon_runtime" ]

  install_enable = true

  if (is_mingw || is_win) {
    output_extension = "dll"
  } else if (is_mac) {
    output_extension = "dylib"
  } else {
    output_extension = "so"
  }

  part_name = "runtime_core"
  subsystem_name = "arkcompiler"
}
