# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(ark_standalone_build)) {
  ark_standalone_build = false
}
if (ark_standalone_build) {
  import("${build_root}/ark.gni")
} else {
  import("//build/ohos.gni")
}

runtime_core_root = "//arkcompiler/runtime_core"
crt_root = "${runtime_core_root}/common_runtime"

if (!defined(is_fastverify)) {
  is_fastverify = false
}
if (!defined(ark_hybrid)) {
  ark_hybrid = false
}

hiviewdfx_ext_deps = []
