# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/sdk/sdk.gni")

ohos_copy("copy_taihe_tools") {
  if (current_toolchain == "//build/toolchain/linux:clang_x64") {
      sources = [
        "../../../prebuilts/taihe/ohos/linux-x86_64",
      ]
  } else if (current_toolchain == "//build/toolchain/mingw:mingw_x86_64") {
      sources = [
        "../../../prebuilts/taihe/ohos/windows-x86_64",
      ]
  } else if (current_toolchain == "//build/toolchain/mac:clang_arm64") {
      sources = [
        "../../../prebuilts/taihe/ohos/darwin-arm64",
      ]
  } else if (current_toolchain == "//build/toolchain/mac:clang_x64") {
      sources = [
        "../../../prebuilts/taihe/ohos/darwin-x86_64",
      ]
  }
  outputs = [ target_out_dir + "/$target_name" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
  part_name = "runtime_core"
  subsystem_name = "arkcompiler"
}
